--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.18",
-    "typography": "^0.16.18"
+    "typography": "^0.16.18",
+    "uuid": "^3.3.2"
   },
   "keywords": [
     "gatsby"
