Fix url for static content.

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
+    "build": "gatsby build --path-prefix",
     "postbuild": "rm -rf docs && mv public docs",
     "develop": "gatsby develop",
     "start": "npm run develop",
